--- a/lib/layout/calendar.css
+++ b/lib/layout/calendar.css
@@ -213,6 +213,73 @@
     margin-right: 4px;
 }
 
+#tooltip .textstatusok {
+    color: #00ff00;
+    display: inline;
+    font-size: 12px;
+    white-space: nowrap;
+}
+
+#tooltip .textstatusabsent {
+    color: #ff4b48;
+    display: inline;
+    font-size: 12px;
+    white-space: nowrap;
+}
+
+#tooltip .textstatuswait {
+    color: #ffff00;
+    display: inline;
+    font-size: 12px;
+    white-space: nowrap;
+}
+
+#tooltip .textstatus {
+    color: #ccc;
+    display: inline;    
+    font-size: 12px;
+    white-space: nowrap;
+}
+
+#tooltip .icon {
+    display: block;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    height: 64px;
+    float: left;
+    width: 64px;
+}
+
+#tooltip .location {
+    font-weight: bold;
+    font-size: 16px;
+    margin-right: 10px;
+    max-width: 250px;
+}
+
+#tooltip .time {
+    font-style: italic;
+    font-size: 10px;
+    color: #ccc;
+}
+
+#tooltip .textBlock {
+    float: left;
+}
+
+#tooltip .description {
+    margin-top: 10px;
+    margin-bottom: 15px;
+    display: block;
+    max-width: 250px;
+}
+
+#tooltip .functions {
+    clear: left;
+    margin-top: 10px;
+    white-space: nowrap;
+}
+
 #tooltip .comment .submit {
     position: relative;
     top: 5px;
