--- a/lib/layout/default.css
+++ b/lib/layout/default.css
@@ -32,6 +32,97 @@ a:hover {
     text-decoration: underline;
 }
 
+h1 {
+    margin-bottom: 10px;
+    border-bottom-width: 1px;
+    border-bottom-color: #999;
+    border-bottom-style: dotted;
+    height: 20px;
+    font-weight: bold;
+    font-size: 16px;
+    color: #777;
+}
+
+h2 {
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    color: #777;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
+}
+
+input[type=text] {
+    background-color: rgba(96,96,96,0.1);
+    border: 1px solid #aaa;
+    color: #666;
+    padding: 2px;
+    font-size: 11px;
+    line-height: 16px;
+    margin: 0px;
+    
+    box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -o-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -ms-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+}
+
+input[type=password] {
+    background-color: rgba(96,96,96,0.1);
+    border: 1px solid #aaa;
+    color: #666;
+    padding: 2px;
+    font-size: 11px;
+    line-height: 16px;
+    margin: 0px;
+    
+    box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -o-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -ms-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+}
+
+input[type=password]:disabled {
+    background-color: rgba(0,0,0,0.12);
+    border: 1px solid rgba(0,0,0,0);
+    
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -o-box-shadow: none;
+    -ms-box-shadow: none;
+}
+
+textarea {
+    background-color: rgba(96,96,96,0.1);
+    border: 1px solid #aaa;
+    color: #666;
+    padding: 2px 4px;
+    font-size: 11px;
+    line-height: 16px;
+    
+    box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -o-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+    -ms-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
+}
+
+.content_area {    
+    padding-left: 10px;
+    padding-top: 15px;
+    height: 420px;
+    width: 910px;
+    overflow-x: hidden;
+    overflow-y: auto;    
+}
+
 .ui-button {
     font-size: 11px;
     height: 22px;
@@ -51,40 +142,6 @@ a:hover {
 
 .ui-dialog-content {
     font-size: 12px;   
-}
-
-input[type=text] {
-    background-color: #ccc;
-    border: 1px solid #aaa;
-    color: #888;
-    padding: 2px;
-    font-size: 11px;
-    line-height: 16px;
-    margin: 0px;
-}
-
-input[type=password] {
-    background-color: #ccc;
-    border: 1px solid #aaa;
-    color: #888;
-    padding: 2px;
-    font-size: 11px;
-    line-height: 16px;
-    margin: 0px;
-}
-
-input[type=password]:disabled {
-    background-color: #ddd;
-    border: 1px solid #ddd;
-}
-
-textarea {
-    background-color: #ccc;
-    border: 1px solid #aaa;
-    color: #888;
-    padding: 2px 4px;
-    font-size: 11px;
-    line-height: 16px;
 }
 
 .clickable {
@@ -164,6 +221,78 @@ textarea {
     -moz-box-shadow: inset 1px 1px 4px 1px rgba(0,0,0,0.25);
     -o-box-shadow: inset 1px 1px 4px 1px rgba(0,0,0,0.25);
     -ms-box-shadow: inset 1px 1px 4px 1px rgba(0,0,0,0.25);
+}
+
+.gradient_ok {    
+    background: linear-gradient(to bottom,   rgba(121, 235, 114, 1) 0%,rgba(57, 196, 51, 1) 100%); 
+    background: -webkit-linear-gradient(top, rgba(121, 235, 114, 1) 0%,rgba(57, 196, 51, 1) 100%);
+    background: -moz-linear-gradient(top,    rgba(121, 235, 114, 1) 0%,rgba(57, 196, 51, 1) 100%);
+    background: -o-linear-gradient(top,      rgba(121, 235, 114, 1) 0%,rgba(57, 196, 51, 1) 100%);
+    background: -ms-linear-gradient(top,     rgba(121, 235, 114, 1) 0%,rgba(57, 196, 51, 1) 100%);
+}
+
+.gradient_available {
+    background: linear-gradient(to bottom,   rgba(236, 217, 73, 1) 0%,rgba(196, 177, 37, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(236, 217, 73, 1) 0%,rgba(196, 177, 37, 1) 100%);
+    background: -moz-linear-gradient(top,    rgba(236, 217, 73, 1) 0%,rgba(196, 177, 37, 1) 100%);
+    background: -o-linear-gradient(top,      rgba(236, 217, 73, 1) 0%,rgba(196, 177, 37, 1) 100%);
+    background: -ms-linear-gradient(top,     rgba(236, 217, 73, 1) 0%,rgba(196, 177, 37, 1) 100%);
+}
+
+.gradient_unavailable {
+    background: linear-gradient(to bottom,   rgba(255, 134, 134, 1) 0%,rgba(204, 100, 97, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(255, 134, 134, 1) 0%,rgba(204, 100, 97, 1) 100%);
+    background: -moz-linear-gradient(top,    rgba(255, 134, 134, 1) 0%,rgba(204, 100, 97, 1) 100%);
+    background: -o-linear-gradient(top,      rgba(255, 134, 134, 1) 0%,rgba(204, 100, 97, 1) 100%);
+    background: -ms-linear-gradient(top,     rgba(255, 134, 134, 1) 0%,rgba(204, 100, 97, 1) 100%);
+}
+
+.gradient_missed {
+    background: linear-gradient(to bottom,   rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+    background: -moz-linear-gradient(top,    rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+    background: -o-linear-gradient(top,      rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+    background: -ms-linear-gradient(top,     rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+}
+
+.gradient_role_tank {
+    background: linear-gradient(to bottom,   rgba(255,212,127,1) 0%,rgba(204,175,102,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(255,212,127,1) 0%,rgba(204,175,102,1) 100%);
+    background: -moz-linear-gradient(top,    rgba(255,212,127,1) 0%,rgba(204,175,102,1) 100%);
+    background: -o-linear-gradient(top,      rgba(255,212,127,1) 0%,rgba(204,175,102,1) 100%);
+    background: -ms-linear-gradient(top,     rgba(255,212,127,1) 0%,rgba(204,175,102,1) 100%);
+}
+
+.gradient_role_heal {
+    background: linear-gradient(to bottom,   rgba(222,246,247,1) 0%,rgba(187,242,255,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(222,246,247,1) 0%,rgba(187,242,255,1) 100%);
+    background: -moz-linear-gradient(top,    rgba(222,246,247,1) 0%,rgba(187,242,255,1) 100%);
+    background: -o-linear-gradient(top,      rgba(222,246,247,1) 0%,rgba(187,242,255,1) 100%);
+    background: -ms-linear-gradient(top,     rgba(222,246,247,1) 0%,rgba(187,242,255,1) 100%);
+}
+
+.gradient_role_melee {
+    background: linear-gradient(to bottom,   rgba(255, 148, 50, 1) 0%,rgba(221, 73, 73, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(255, 148, 50, 1) 0%,rgba(221, 73, 73, 1) 100%);
+    background: -moz-linear-gradient(top,    rgba(255, 148, 50, 1) 0%,rgba(221, 73, 73, 1) 100%);
+    background: -o-linear-gradient(top,      rgba(255, 148, 50, 1) 0%,rgba(221, 73, 73, 1) 100%);
+    background: -ms-linear-gradient(top,     rgba(255, 148, 50, 1) 0%,rgba(221, 73, 73, 1) 100%);
+}
+
+.gradient_role_range {    
+    background: linear-gradient(to bottom,   rgba(187,255,116,1) 0%,rgba(131,178,82,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(187,255,116,1) 0%,rgba(131,178,82,1) 100%);
+    background: -moz-linear-gradient(top,    rgba(187,255,116,1) 0%,rgba(131,178,82,1) 100%);
+    background: -o-linear-gradient(top,      rgba(187,255,116,1) 0%,rgba(131,178,82,1) 100%);
+    background: -ms-linear-gradient(top,     rgba(187,255,116,1) 0%,rgba(131,178,82,1) 100%);
+}
+
+.gradient_role_support {
+    background: linear-gradient(to bottom,   rgba(167, 199, 255, 1) 0%,rgba(177, 138, 243, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(167, 199, 255, 1) 0%,rgba(177, 138, 243, 1) 100%);
+    background: -moz-linear-gradient(top,    rgba(167, 199, 255, 1) 0%,rgba(177, 138, 243, 1) 100%);
+    background: -o-linear-gradient(top,      rgba(167, 199, 255, 1) 0%,rgba(177, 138, 243, 1) 100%);
+    background: -ms-linear-gradient(top,     rgba(167, 199, 255, 1) 0%,rgba(177, 138, 243, 1) 100%);
 }
 
 #lockMessage {
