--- a/lib/layout/raid.css
+++ b/lib/layout/raid.css
@@ -9,6 +9,16 @@
     width: 980px;
     float: left;
 }
+
+#raidsetup {   
+}
+
+#slackers {
+}
+
+#raidoptions {
+}
+
 #raiddetail .setup {
     background-image: url(images/block_01.png);
 }
@@ -81,7 +91,7 @@
 
 #raiddetail .raidinfo {
     height: 64px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 
 #raiddetail .raidicon {
@@ -89,7 +99,6 @@
     width: 64px;
     height: 64px;
     margin-right: 10px;
-    margin-left: 12px;
     display: inline-block;
 }
 
@@ -268,69 +277,6 @@
     background-image: url(images/move_right.png);
 }
 
-/*
-#tooltip .playerTooltipIcon {
-    width: 32px;
-    height: 32px;
-    float: left;
-}
-
-#tooltip .playerTooltipRoleIcon {
-    width: 32px;
-    height: 32px;
-}
-
-#tooltip .playerTooltipRoleIcon .mainbadge {
-    background-image: url(images/star.png);
-    width: 18px;
-    height: 16px;
-    position: relative;
-    left: 12px;
-    top: 14px;
-}
-
-#tooltip .playerTooltipIconLarge {
-    width: 64px;
-    height: 64px;
-    text-align: center;
-    float: left;
-}
-
-#tooltip .playerTooltipIconLarge .mainbadge {
-    background-image: url(images/star.png);
-    width: 24px;
-    height: 24px;
-    float: left;
-    position: absolute;
-    left: 2px;
-    top: 2px;
-    display: inline-block;
-}
-
-#tooltip .playerTooltipIconLarge .twinkcount {
-    background-image: url(images/switchable.png);
-    font-size: 12px;
-    position: relative;
-    top: 45px;
-    width: 64px;
-    height: 15px;
-    text-align: center;
-    padding-top: 1px;
-}
-
-#tooltip .playerTooltipText {
-    float: left;
-    margin-left: 10px;
-    max-width: 200px;
-    display: inline-block;
-}
-
-#tooltip .playerTooltipText .name {
-    font-weight: bold;
-    font-size: 1.2em;
-    margin-bottom: 10px;
-}*/
-
 #raiddetail .playerName {
     height: 16px;
     display: inline-block;
@@ -398,23 +344,10 @@
 }
 
 #raiddetail .roleList {
-    margin-left: 12px; 
+    margin-right: 12px;
     height: 380px;
     float: left;
     overflow: visible;
-}
-
-#raiddetail h2 {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    position: relative;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-#raiddetail .slackerspanel h2 {
-    font-size: 1.5em;
-    margin-bottom: 15px;
 }
 
 #raiddetail .attendance_count {
@@ -563,18 +496,6 @@
     box-shadow: inset 1px 1px 8px rgba(200, 0, 0, 0.5)!important;
 }
 
-#raiddetail .slackerspanel {
-    position: absolute;
-    left: 58px;
-    float: left;
-}
-
-#raiddetail .settingspanel {
-    position: relative;
-    left: 12px;
-    float: left;
-}
-
 #raiddetail .locationicon {
     float:left;
     width: 64px;
@@ -585,4 +506,12 @@
 
 #absentList {
     height: 170px;
+}
+
+#raidoptions .filltext {
+    display: inline-block;
+    text-align: center; 
+    color: #000;
+    font-size: 11px;
+    font-family: Helvetica, Verdana, Arial, sans-serif; 
 }
