--- a/lib/layout/settings.css
+++ b/lib/layout/settings.css
@@ -13,43 +13,20 @@
 
 #groups {
     padding-left: 5px;
-    padding-top: 10px;
-    height: 420px;
     width: 920px;
-    overflow: hidden;
 }
 
 #raidsettings {
-    padding-left: 15px;
-    padding-top: 15px;
-    height: 410px;
-    width: 900px;
-    overflow: hidden;
 }
 
 
 #locationsettings {
-    padding-left: 15px;
-    padding-top: 15px;
-    height: 410px;
-    width: 900px;
-    overflow-y: auto;
 }
 
 #statistics {
-    padding-left: 15px;
-    padding-top: 14px;
-    height: 410px;
-    width: 900px;
-    overflow-y: auto;
 }
 
 #about {
-    padding-left: 15px;
-    padding-top: 15px;
-    height: 410px;
-    width: 900px;
-    overflow-y: auto;
 }
 
 #about .version {
@@ -64,24 +41,6 @@
     font-size: 24px;
     font-weight: bold;
     color: #666666;
-}
-
-#settings h1 {
-    margin-left: 0px;
-    margin-bottom: 10px;
-    margin-right: 0px;
-    margin-top: 0px;
-    border-left-width: 0px;
-    border-bottom-width: 1px;
-    border-right-width: 0px;
-    border-top-width: 0px;
-    border-bottom-color: #989898;
-    border-bottom-style: dotted;
-    height: 20px;
-    font-weight: bold;
-    font-size: 16px;
-    color: #7d7d7d;
-    padding: 0px;
 }
 
 #settings .propLabel2 {
@@ -366,80 +325,35 @@
     border-radius: 4px;
     border: 1px solid #999;
     overflow: hidden;
-}
-
-#statistics .ok {
-    display: inline-block;
     height: 26px;
-    color: #00AA00;
-    text-align: right;
-    
-    background: linear-gradient(to bottom, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%); 
-    background: -webkit-linear-gradient(top, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%);
-    background: -moz-linear-gradient(top, rgba(117,225,111,1) 0%, rgba(79,217,73,1) 100%);
-    background: -o-linear-gradient(top, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%);
-    background: -ms-linear-gradient(top, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%);
+    color: rgba(0,0,0,0.5);
 }
 
-#statistics .available {
-    display: inline-block;
+#statistics .bar_part {
     height: 26px;
-    color: #888822;
-    text-align: right;
-    
-    background: linear-gradient(to bottom, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
-    background: -webkit-linear-gradient(top, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
-    background: -moz-linear-gradient(top, rgba(214,206,147,1) 0%, rgba(200,189,108,1) 100%);
-    background: -o-linear-gradient(top, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
-    background: -ms-linear-gradient(top, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
-}
-
-#statistics .unavailable {
     display: inline-block;
-    height: 26px;
-    color: #AA6666;
-    text-align: right;
-    
-    background: linear-gradient(to bottom, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
-    background: -webkit-linear-gradient(top, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
-    background: -moz-linear-gradient(top, rgba(205,158,157,1) 0%, rgba(189,129,127,1) 100%);
-    background: -o-linear-gradient(top, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
-    background: -ms-linear-gradient(top, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
-}
-
-#statistics .missed {
-    display: inline-block;
-    height: 26px;
-    color: #777777;
-    text-align: right;
-    
-    background: linear-gradient(to bottom, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
-    background: -webkit-linear-gradient(top, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
-    background: -moz-linear-gradient(top, rgba(177,177,177,1) 0%, rgba(154,154,154,1) 100%);
-    background: -o-linear-gradient(top, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
-    background: -ms-linear-gradient(top, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
-}
-
-#statistics .count {
-    position: relative;
     font-size: 14px;
-    right: 5px;
-    top: 4px;
-}
-
-#statistics .labels {
-    margin-bottom: 20px;
-    margin-left: 140px;
+    line-height: 26px;
+    color: rgba(0,0,0,0.5);
+    text-align: right;
+    vertical-align: middle;
+    padding-right: 10px;
 }
 
 #statistics .box {
     margin-right: 10px;
     display: inline-block;
     width: 14px;
+    height: 26px;
     float: left;
     border-radius: 4px;
     border: 1px solid #999;
     overflow: hidden;
+}
+
+#statistics .labels {
+    margin-bottom: 20px;
+    margin-left: 140px;
 }
 
 #statistics .labels .label {
