--- a/lib/layout/sheet.css
+++ b/lib/layout/sheet.css
@@ -1,17 +1,20 @@
 #sheetoverlay {
     position: fixed;
     top: 50%;
-    left: 50%; 
+    left: 50%;
+    margin-top: -130px;
+    margin-left: -300px;
     display: none;
     background-color: rgba(0,0,0,0.9);
     border-radius: 16px;
+    padding: 24px;
+    z-index: 20;
+
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.5);
     -webkit-border-radius: 16px;
     -moz-border-radius: 16px;
     -o-border-radius: 16px;
     -ms-border-radius: 16px;
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.5);
-    padding: 24px;
-    z-index: 20;
 }
 
 #closesheet {
