--- a/lib/layout/frame.css
+++ b/lib/layout/frame.css
@@ -59,6 +59,7 @@
     display: inline-block;
     height: 45px;
     width: 160px;
+    margin-right: 2px;
     font-family: Helvetica, Verdana, Arial, sans-serif;
     font-size: 14px;
     text-align: center;
