--- a/lib/layout/default.css
+++ b/lib/layout/default.css
@@ -75,6 +75,17 @@ input[type=text] {
     -ms-box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.1);
 }
 
+input[type=text]:disabled {
+    background-color: rgba(0,0,0,0.05);
+    border: 1px solid rgba(0,0,0,0);
+    
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -o-box-shadow: none;
+    -ms-box-shadow: none;
+}
+
 input[type=password] {
     background-color: rgba(96,96,96,0.1);
     border: 1px solid #aaa;
@@ -92,7 +103,7 @@ input[type=password] {
 }
 
 input[type=password]:disabled {
-    background-color: rgba(0,0,0,0.12);
+    background-color: rgba(0,0,0,0.05);
     border: 1px solid rgba(0,0,0,0);
     
     box-shadow: none;
