--- a/lib/layout/raidlist.css
+++ b/lib/layout/raidlist.css
@@ -86,6 +86,7 @@
     font-weight: bold;
     font-size: 12px;
     margin-bottom: 5px;
+    margin-top: 3px;
 }
 
 #raidlist .raidSlot .setupInfo {
