--- a/lib/layout/raid.css
+++ b/lib/layout/raid.css
@@ -123,7 +123,7 @@
     position: absolute;
     font-size: 11px;
     color: #666;
-    overflow-y: auto;
+    overflow-y: hidden;
     padding-left: 32px;
     padding-top: 4px;
     padding-top: 4px;
