--- a/lib/layout/calendar.css
+++ b/lib/layout/calendar.css
@@ -175,30 +175,38 @@
     color: #00ff00;
 }
 
-#calendar .raid .statusok .ui-icon {
+#calendar .raid .status .raidsize {
+    width: 16px;
+    text-align: right;
     display: inline-block;
 }
 
-#calendar.bigicons .raid .status:before {
-    width: 28px;
+#calendar .raid .statusok .ui-icon {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+}
+
+#calendar.bigicons .raid .status .role_info {
+    width: 30px;
     height: 28px;
     display: inline-block;
     content: '';
     margin-right: 16px;
 }
-#calendar.bigicons .raid .statusok:before {
+#calendar.bigicons .raid .statusok .role_info {
     margin-right: 0;
 }
 
-#calendar.bigicons .raid .status.med:before {
+#calendar.bigicons .raid .status.med .role_info {
     background: url('images/icon_role_heal.png') transparent no-repeat;
 }
 
-#calendar.bigicons .raid .status.tnk:before {
+#calendar.bigicons .raid .status.tnk .role_info {
     background: url('images/icon_role_tank.png') transparent no-repeat;
 }
 
-#calendar.bigicons .raid .status.dmg:before {
+#calendar.bigicons .raid .status.dmg .role_info {
     background: url('images/icon_role_melee.png') transparent no-repeat;
 }
 
